# hedgehog-genfun

./: README.md  hedgehog-genfun.cabal
Hedgehog/: GenFun.hs
